--- a/docs/tutorials/zh/学会一些实用的小技巧.md
+++ b/docs/tutorials/zh/学会一些实用的小技巧.md
@@ -31,7 +31,7 @@ root.mainloop()
 
 <details><summary><b>点击查看实现效果</b></summary>
 
-![png](res/color.png)
+![png](../../images/color.png)
 
 </details>
 
@@ -55,6 +55,6 @@ root.mainloop()
 
 <details><summary><b>点击查看实现效果</b></summary>
 
-![gif](res/animation.gif)
+![gif](../../images/animation.gif)
 
 </details>
