--- a/docs/tutorials/zh/实战项目推荐.md
+++ b/docs/tutorials/zh/实战项目推荐.md
@@ -19,9 +19,9 @@
 
 这个案例使用了 tkintertools-v2.5.7 版本（新版已无法兼容），含有一些 bug，大量采用了 tkintertools 的控件，取得了比较好的界面效果。体现了 tkintertools 模块与 tkinter 模块相比在颜值上的碾压性！
 
-![gif](res/todolist_1.gif)
+![gif](../../images/todolist_1.gif)
 
-![gif](res/todolist_2.gif)
+![gif](../../images/todolist_2.gif)
 
 ### 中国象棋游戏
 
@@ -33,9 +33,9 @@
 注意：源代码有解压密码，解压密码在链接文章中，请仔细查找！  
 这个案例使用了 tkintertools-v2.5.9.5 版本（新版已无法兼容）, 含有少量 bug，部分 UI 采用了 tkintertools，部分 UI 采用了 tkinter，属于混合使用。体现了 tkintertools 模块对 tkinter 模块的兼容性！
 
-![png](res/chinachess_1.png)
+![png](../../images/chinachess_1.png)
 
-![png](res/chinachess_2.png)
+![png](../../images/chinachess_2.png)
 
 ### 简易登录界面
 
@@ -46,9 +46,9 @@
 
 这个案例使用了稳定版的 tkintertools-v2.6.0，完全采用 tkintertools 的控件，颜值很高，界面非常流畅。体现了 tkintertools 模块与 tkinter 模块相比在性能上的优越性！
 
-![png](res/login_1.png)
+![png](../../images/login_1.png)
 
-![png](res/login_2.png)
+![png](../../images/login_2.png)
 
 ---
 
