--- a/docs/tutorials/zh/1-1.md
+++ b/docs/tutorials/zh/1-1.md
@@ -5,9 +5,10 @@
   - [一、运行环境](#一运行环境)
   - [二、获取稳定版](#二获取稳定版)
     - [2.1 Windows 平台](#21-windows-平台)
-    - [2.2 Linux 平台](#22-linux-平台)
-      - [2.2.1 检测是否有 tkinter](#221-检测是否有-tkinter)
-      - [2.2.2 通过 miniconda 安装合适的 Python 环境](#222-通过-miniconda-安装合适的-python-环境)
+    - [2.2 macOS 平台](#22-macos-平台)
+    - [2.3 Linux 平台](#23-linux-平台)
+      - [2.3.1 检测是否有 tkinter](#231-检测是否有-tkinter)
+      - [2.3.2 通过 miniconda 安装合适的 Python 环境](#232-通过-miniconda-安装合适的-python-环境)
   - [三、获取预览版（可选）](#三获取预览版可选)
   - [四、更新与查看版本](#四更新与查看版本)
     - [4.1 更新版本](#41-更新版本)
@@ -18,8 +19,10 @@
 
 `tkintertools` 是跨平台的，至少可以在下面多个平台上运行（已测试）：
 
-![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows)
+![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows10)
 ![Windows11](https://img.shields.io/badge/Windows-11-green?logo=windows11)
+![macOS](https://img.shields.io/badge/macOS-11-green?logo=macOS)
+![macOS](https://img.shields.io/badge/macOS-14-green?logo=macOS)
 ![Ubuntu22.04](https://img.shields.io/badge/Ubuntu-22.04-green?logo=ubuntu)
 ![Deepin20.9](https://img.shields.io/badge/Deepin-20.9-green?logo=deepin)
 
@@ -59,11 +62,15 @@ pip install tkintertools
 pip install tkintertools -i https://pypi.tuna.tsinghua.edu.cn/simple/
 ```
 
-### 2.2 Linux 平台
+### 2.2 macOS 平台
+
+暂时没有具体教程，可参考 Linux 平台部分
+
+### 2.3 Linux 平台
 
 由于 Linux 自带的 Python 环境可能不满足要求，因此在 Windows 平台操作的基础上还需添加一些额外的步骤。
 
-#### 2.2.1 检测是否有 tkinter
+#### 2.3.1 检测是否有 tkinter
 
 打开终端输入 `python3` 进入 Linux 自带的 Python3 交互环境，输入下面的命令来验证 `tkinter` 是否安装：
 
@@ -73,7 +80,7 @@ import tkinter
 
 若没有出现报错则说明已安装 `tkinter`，但是一般情况都是没有安装的，会报错。
 
-#### 2.2.2 通过 miniconda 安装合适的 Python 环境
+#### 2.3.2 通过 miniconda 安装合适的 Python 环境
 
 我们不直接安装 `tkinter`，因为直接安装 `tkinter` 的步骤非常繁琐且容易出错，这里推荐使用 Miniconda 来构建虚拟环境，不易出错且不影响 Linux 自带的 Python 环境。
 
