--- a/docs/tutorials/zh/1-2.md
+++ b/docs/tutorials/zh/1-2.md
@@ -224,11 +224,11 @@ root.mainloop()
 
 ~~说明一下，这方法是我在 `idlelib` 源代码里面泡了好几个小时才找到的（我裂开来）……~~
 
-我们以 IDLE 为例，若是不执行处理 DPI 的相关功能，效果是这样的：
+我们以 IDLE 为例，若是执行处理了 DPI 的相关功能，效果是这样的：
 
 ![png](images/1.2-2.3-1.png)
 
-若是执行了相关的函数，效果是这样的：
+若是不执行相关的函数，效果是这样的：
 
 ![png](images/1.2-2.3-2.png)
 
@@ -280,16 +280,18 @@ root.mainloop()
 
 目前已经测试通过的操作系统有：
 
-![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows)
+![Windows10](https://img.shields.io/badge/Windows-10-green?logo=windows10)
 ![Windows11](https://img.shields.io/badge/Windows-11-green?logo=windows11)
+![macOS](https://img.shields.io/badge/macOS-11-green?logo=macOS)
+![macOS](https://img.shields.io/badge/macOS-14-green?logo=macOS)
 ![Ubuntu22.04](https://img.shields.io/badge/Ubuntu-22.04-green?logo=ubuntu)
 ![Deepin20.9](https://img.shields.io/badge/Deepin-20.9-green?logo=deepin)
 
 但我估摸着通过测试的要求应该是下面这样的：
 
 * `Windows`: 版本大于等于 7 应该都行，简单说就是 Windows 7 及以上
+* `macOS`: 版本大于 11 的应该可以，更低版本的没有测试过
 * `Linux`: 没啥大问题，应该都可以
-* `MacOS`: 我不道啊（难绷），毕竟我又没有装 MacOS 的电脑（有没有好心人帮我测试一下呢？）
 
 不同操作系统上的具体效果（并非完全一样，有一点点区别）可以在下一节末尾看到，这里就不展示啦。
 
