--- a/docs/tutorials/zh/1-3.md
+++ b/docs/tutorials/zh/1-3.md
@@ -215,6 +215,10 @@ root.mainloop()  # 窗口进入消息事件循环
 
     Windows 10 平台上做了特殊的处理，为了匹配 Windows 10 其他控件的效果，控件的圆角大小默认值被设置为了 0 ，而在其他系统上面，控件会默认带有一定大小的圆角，不用担心这种设定会造成什么影响，这只是默认值而已，你可以通过参数来调整。
 
+* macOS 14:
+
+    暂时没有内容，近期会更新。
+
 * Ubuntu 22.04（WSL）: 
 
     <details><summary><b>点击查看实现效果</b></summary>
