--- a/docs/tutorials/zh/1-1.md
+++ b/docs/tutorials/zh/1-1.md
@@ -64,7 +64,7 @@ pip install tkintertools -i https://pypi.tuna.tsinghua.edu.cn/simple/
 
 ### 2.2 macOS 平台
 
-暂时没有具体教程，可参考 Linux 平台部分
+同 Windows 平台，此处不再赘述。
 
 ### 2.3 Linux 平台
 
