--- a/docs/tutorials/zh/1-3.md
+++ b/docs/tutorials/zh/1-3.md
@@ -1,7 +1,7 @@
-§1.3 tkintertools 初体验：尝试编写一个图形化程序
-=============================================
+§1.3 tkintertools 初体验
+========================
 
-- [§1.3 tkintertools 初体验：尝试编写一个图形化程序](#13-tkintertools-初体验尝试编写一个图形化程序)
+- [§1.3 tkintertools 初体验](#13-tkintertools-初体验)
   - [一、基本框架（可选）](#一基本框架可选)
     - [1.1 tkinter 界面程序的开发框架](#11-tkinter-界面程序的开发框架)
     - [1.2 tkintertools 的开发框架](#12-tkintertools-的开发框架)
