--- a/docs/tutorials/zh/1-2.md
+++ b/docs/tutorials/zh/1-2.md
@@ -220,7 +220,7 @@ root.mainloop()
 
 ### 2.3 高清显示
 
-其实这算是 `tkinter` 的一个 bug 没有修复而已……这是在 Windows 系统上独有的问题，对于电脑缩放比率不是 100% 的伙计们而言，这个问题就会出现，也就是窗口模糊。但好在 `tkintertools` 解决了这个问题！顺便一提，这个解决办法是在 Python 内置库 `idlelib` 中找到的。`tkintertools` 只是对这个方法进行了一些简单的封装。
+其实这算是 `tkinter` 的一个 bug 没有修复而已……这是在 Windows 系统上独有的问题，对于电脑缩放比率不是 100% 的伙计们而言，这个问题就会出现，也就是窗口模糊。但好在 `tkintertools` 解决了这个问题！顺便一提，这个解决办法是在 Python 内置库 `idlelib` 中找到的。
 
 ~~说明一下，这方法是我在 `idlelib` 源代码里面泡了好几个小时才找到的（我裂开来）……~~
 
