--- a/docs/tutorials/zh/1-3.md
+++ b/docs/tutorials/zh/1-3.md
@@ -184,7 +184,7 @@ BACKGROUND = '#BEE7E9'  # 画布背景颜色
 canvas = tkt.Canvas(root, WIDTH, HEIGHT, X, Y, background=BACKGROUND)  # 创建画布
 
 # 第三部分
-canvas.create_text(640, 200, text='账 号 登 录', font=(tkt.FONT, 40))  # 文本显示
+canvas.create_text(640, 200, text='账 号 登 录', font=(tkt.FONT, 32))  # 文本显示
 tkt.Entry(canvas, 450, 360, 380, 50, text=('账号', '点击输入账号'))  # 账号输入框
 tkt.Entry(canvas, 450, 430, 380, 50, text=('密码', '点击输入密码'), show='●')  # 密码输入框
 tkt.Button(canvas, 450, 500, 180, 50, text='注册')  # 注册按钮
@@ -237,7 +237,7 @@ root.mainloop()  # 窗口进入消息事件循环
 
     </details>
 
-    这个是真实的深度操作系统演示效果，而非虚拟机或者 WSL。（呃，这个默认字体可能有点 bug，不过嘛，反正可以改。~~那为什么教程里面不改呢？因为我懒……~~）
+    这个是真实的深度操作系统演示效果，而非虚拟机或者 WSL。（呃，这个字体可能有点 bug，tkinter 在 Deepin 上表现貌似不太好。~~绝对不是我的问题。~~）
 
 > ℹ️**注意**  
 > 本章内容到此结束！点击下一节将跳转至下一章的教程。
