--- a/docs/tutorials/1-2.md
+++ b/docs/tutorials/1-2.md
@@ -79,7 +79,10 @@ def colorful(canvas: tkt.Canvas, x: int, y: int, width: int, height: int, colort
 
 root = tkt.Tk('tkintertools', 1280, 720)
 canvas = tkt.Canvas(root, 1280, 720, 0, 0)
-background = tkt.PhotoImage('background.png')
+try:
+    background = tkt.PhotoImage('background.png')
+except:
+    background = None
 bg_item = canvas.create_image(640, 360, image=background)
 
 colorful(canvas, 10, 360, 150, 40, ('#FF0000', '#00FF00'))
@@ -101,88 +104,133 @@ tkt.Button(canvas, 10, 60, 150, 40, text='Button')
 tkt.Button(canvas, 10, 110, 150, 40, text='Button', radius=20)
 tkt.Button(canvas, 10, 160, 150, 40, text='Button').set_live(False)
 tkt.Button(canvas, 10, 210, 150, 40, text='Button', radius=0, borderwidth=3)
-tkt.Button(canvas, 10, 260, 150, 40, text='Button', color_fill=('lightgreen', 'springgreen', 'green'), color_outline=('grey', 'black', 'black'))
-tkt.Button(canvas, 10, 310, 150, 40, text='Button', color_text=('orange', 'red', 'red'))
-tkt.Button(canvas, 10, 360, 150, 40, text='Button', radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Button(canvas, 10, 410, 150, 40, text='Button', radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Button(canvas, 10, 460, 150, 40, text='Button', radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Button(canvas, 10, 260, 150, 40, text='Button', color_fill=(
+    'lightgreen', 'springgreen', 'green'), color_outline=('grey', 'black', 'black'))
+tkt.Button(canvas, 10, 310, 150, 40, text='Button',
+           color_text=('orange', 'red', 'red'))
+tkt.Button(canvas, 10, 360, 150, 40, text='Button',
+           radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Button(canvas, 10, 410, 150, 40, text='Button',
+           radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Button(canvas, 10, 460, 150, 40, text='Button',
+           radius=0, color_fill=tkt.COLOR_NONE)
 tkt.Button(canvas, 10, 510, 150, 40, text='Button', justify='left')
-tkt.Button(canvas, 10, 560, 150, 40, text='Button', color_outline=('red', 'red', 'red'))
+tkt.Button(canvas, 10, 560, 150, 40, text='Button',
+           color_outline=('red', 'red', 'red'))
 tkt.Button(canvas, 10, 610, 150, 40, text='Button', font=('华文行楷', tkt.SIZE))
 
 tooltip = tkt.ToolTip("Click this to give me a star!\nThanks! (●'◡'●)")
-tkt.Button(canvas, 10, 660, 150, 40, text='👉Like👈', tooltip=tooltip, command=lambda: webbrowser.open('https://github.com/Xiaokang2022/tkintertools'))
+tkt.Button(canvas, 10, 660, 150, 40, text='👉Like👈', tooltip=tooltip,
+           command=lambda: webbrowser.open('https://github.com/Xiaokang2022/tkintertools'))
 
 tkt.Entry(canvas, 170, 10, 250, 40, text=('Entry', 'Input'), radius=0)
 tkt.Entry(canvas, 170, 60, 250, 40, text=('Entry', 'Input'))
 tkt.Entry(canvas, 170, 110, 250, 40, text=('Entry', 'Input'), radius=20)
 tkt.Entry(canvas, 170, 160, 250, 40, text=('Entry', 'Input')).set_live(False)
-tkt.Entry(canvas, 170, 210, 250, 40, text=('Entry', 'Input'), radius=0, borderwidth=3)
-tkt.Entry(canvas, 170, 260, 250, 40, text=('Entry', 'Input'), color_fill=('skyblue', 'cyan', 'cyan'), color_outline=('grey', 'black', 'black'))
-tkt.Entry(canvas, 170, 310, 250, 40, text=('Entry', 'Input'), color_text=('lightgreen', 'springgreen', 'springgreen'))
-tkt.Entry(canvas, 170, 360, 250, 40, text=('Entry', 'Input'), radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Entry(canvas, 170, 410, 250, 40, text=('Entry', 'Input'), radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Entry(canvas, 170, 460, 250, 40, text=('Entry', 'Input'), radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Entry(canvas, 170, 210, 250, 40, text=(
+    'Entry', 'Input'), radius=0, borderwidth=3)
+tkt.Entry(canvas, 170, 260, 250, 40, text=('Entry', 'Input'), color_fill=(
+    'skyblue', 'cyan', 'cyan'), color_outline=('grey', 'black', 'black'))
+tkt.Entry(canvas, 170, 310, 250, 40, text=('Entry', 'Input'),
+          color_text=('lightgreen', 'springgreen', 'springgreen'))
+tkt.Entry(canvas, 170, 360, 250, 40, text=('Entry', 'Input'),
+          radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Entry(canvas, 170, 410, 250, 40, text=('Entry', 'Input'),
+          radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Entry(canvas, 170, 460, 250, 40, text=('Entry', 'Input'),
+          radius=0, color_fill=tkt.COLOR_NONE)
 tkt.Entry(canvas, 170, 510, 250, 40, text=('Entry', 'Input'), justify='center')
-tkt.Entry(canvas, 170, 560, 250, 40, text=('Entry', 'Input'), color_outline=('red', 'red', 'red'))
-tkt.Entry(canvas, 170, 610, 250, 40, text=('Entry', 'Input'), font=('华文行楷', tkt.SIZE))
-tkt.Entry(canvas, 170, 660, 250, 40, text=('Entry', 'Input'), show='●').set('Entry')
+tkt.Entry(canvas, 170, 560, 250, 40, text=('Entry', 'Input'),
+          color_outline=('red', 'red', 'red'))
+tkt.Entry(canvas, 170, 610, 250, 40, text=(
+    'Entry', 'Input'), font=('华文行楷', tkt.SIZE))
+tkt.Entry(canvas, 170, 660, 250, 40, text=(
+    'Entry', 'Input'), show='●').set('Entry')
 
 tkt.Switch(canvas, 430, 10 + 5, 30, radius=0)
 tkt.Switch(canvas, 430, 60 + 5, 30, radius=4)
 tkt.Switch(canvas, 430, 110 + 5, 30)
 tkt.Switch(canvas, 430, 160 + 5, 30, radius=4).set_live(False)
 tkt.Switch(canvas, 430, 210 + 5, 30, radius=0, borderwidth=3)
-tkt.Switch(canvas, 430, 260 + 5, 30, default=True, color_fill_on=('orange', 'yellow', 'yellow'), color_outline_on=('grey', 'black', 'black'))
-tkt.Switch(canvas, 430, 310 + 5, 30, color_fill_slider=('red', 'yellow', 'yellow'))
-tkt.Switch(canvas, 430, 360 + 5, 30, radius=0, color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
-tkt.Switch(canvas, 430, 410 + 5, 30, radius=0, color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
-tkt.Switch(canvas, 430, 460 + 5, 30, radius=0, color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
+tkt.Switch(canvas, 430, 260 + 5, 30, default=True, color_fill_on=('orange',
+           'yellow', 'yellow'), color_outline_on=('grey', 'black', 'black'))
+tkt.Switch(canvas, 430, 310 + 5, 30,
+           color_fill_slider=('red', 'yellow', 'yellow'))
+tkt.Switch(canvas, 430, 360 + 5, 30, radius=0,
+           color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
+tkt.Switch(canvas, 430, 410 + 5, 30, radius=0,
+           color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
+tkt.Switch(canvas, 430, 460 + 5, 30, radius=0,
+           color_fill_on=tkt.COLOR_NONE, color_fill_off=tkt.COLOR_NONE)
 tkt.Switch(canvas, 430, 510 + 10, 20, width=60, default=True)
-tkt.Switch(canvas, 430, 560 + 5, 30, color_outline_on=('red', 'red', 'red'), color_outline_off=('red', 'red', 'red'))
-tkt.Switch(canvas, 430, 610 + 5, 30, on=lambda: canvas.itemconfigure(bg_item, image=background), off=lambda: canvas.itemconfigure(bg_item, image=''), default=True)
+tkt.Switch(canvas, 430, 560 + 5, 30, color_outline_on=('red',
+           'red', 'red'), color_outline_off=('red', 'red', 'red'))
+tkt.Switch(canvas, 430, 610 + 5, 30, on=lambda: canvas.itemconfigure(bg_item,
+           image=background), off=lambda: canvas.itemconfigure(bg_item, image=''), default=True)
 
 tkt.Label(canvas, 500, 10, 200, 40, text='Label', radius=0)
 tkt.Label(canvas, 500, 60, 200, 40, text='Label')
 tkt.Label(canvas, 500, 110, 200, 40, text='Label', radius=20)
 tkt.Label(canvas, 500, 160, 200, 40, text='Label').set_live(False)
 tkt.Label(canvas, 500, 210, 200, 40, text='Label', radius=0, borderwidth=3)
-tkt.Label(canvas, 500, 260, 200, 40, text='Label', color_fill=('lightpink', 'deeppink'), color_outline=('grey', 'black'))
-tkt.Label(canvas, 500, 310, 200, 40, text='Label', color_text=('skyblue', 'cyan'))
-tkt.Label(canvas, 500, 360, 200, 40, text='Label', radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Label(canvas, 500, 410, 200, 40, text='Label', radius=0, color_fill=tkt.COLOR_NONE)
-tkt.Label(canvas, 500, 460, 200, 40, text='Label', radius=0, color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
+tkt.Label(canvas, 500, 260, 200, 40, text='Label', color_fill=(
+    'lightpink', 'deeppink'), color_outline=('grey', 'black'))
+tkt.Label(canvas, 500, 310, 200, 40, text='Label',
+          color_text=('skyblue', 'cyan'))
+tkt.Label(canvas, 500, 360, 200, 40, text='Label',
+          radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Label(canvas, 500, 410, 200, 40, text='Label',
+          radius=0, color_fill=tkt.COLOR_NONE)
+tkt.Label(canvas, 500, 460, 200, 40, text='Label', radius=0,
+          color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
 tkt.Label(canvas, 500, 510, 200, 40, text='Label', justify='right')
-tkt.Label(canvas, 500, 560, 200, 40, text='Label', color_outline=('red', 'red', 'red'))
+tkt.Label(canvas, 500, 560, 200, 40, text='Label',
+          color_outline=('red', 'red', 'red'))
 tkt.Label(canvas, 500, 610, 200, 40, text='Label', font=('华文行楷', tkt.SIZE))
 
 tkt.CheckButton(canvas, 720, 10 + 5, 30, text='CheckButton', radius=0)
 tkt.CheckButton(canvas, 720, 60 + 5, 30, text='CheckButton')
 tkt.CheckButton(canvas, 720, 110 + 5, 30, text='CheckButton', radius=15)
 tkt.CheckButton(canvas, 720, 160 + 5, 30, text='CheckButton').set_live(False)
-tkt.CheckButton(canvas, 720, 210 + 5, 30, text='CheckButton', radius=0, borderwidth=3)
-tkt.CheckButton(canvas, 720, 260 + 5, 30, text='CheckButton', color_fill=('skyblue', 'cyan', 'cyan'), color_outline=('grey', 'black', 'black'))
-tkt.CheckButton(canvas, 720, 310 + 5, 30, text='CheckButton', color_text=('pink', 'orange', 'orange'))
-tkt.CheckButton(canvas, 720, 360 + 5, 30, text='CheckButton', radius=0, color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 720, 410 + 5, 30, text='CheckButton', radius=0, color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 720, 460 + 5, 30, text='CheckButton', radius=0, color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 895, 510 + 5, 30, text='CheckButton', justify='left', color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 720, 560 + 5, 30, text='CheckButton', color_outline=('red', 'red', 'red'), color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 720, 610 + 5, 30, text='CheckButton', font=('华文行楷', tkt.SIZE), color_text=('grey', 'white', 'white'))
-tkt.CheckButton(canvas, 720, 660 + 5, 30, text='CheckButton', tick='✕', value=True, color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 210 + 5, 30,
+                text='CheckButton', radius=0, borderwidth=3)
+tkt.CheckButton(canvas, 720, 260 + 5, 30, text='CheckButton', color_fill=(
+    'skyblue', 'cyan', 'cyan'), color_outline=('grey', 'black', 'black'))
+tkt.CheckButton(canvas, 720, 310 + 5, 30, text='CheckButton',
+                color_text=('pink', 'orange', 'orange'))
+tkt.CheckButton(canvas, 720, 360 + 5, 30, text='CheckButton', radius=0,
+                color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 410 + 5, 30, text='CheckButton', radius=0,
+                color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 460 + 5, 30, text='CheckButton', radius=0,
+                color_fill=tkt.COLOR_NONE, color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 895, 510 + 5, 30, text='CheckButton',
+                justify='left', color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 560 + 5, 30, text='CheckButton',
+                color_outline=('red', 'red', 'red'), color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 610 + 5, 30, text='CheckButton',
+                font=('华文行楷', tkt.SIZE), color_text=('grey', 'white', 'white'))
+tkt.CheckButton(canvas, 720, 660 + 5, 30, text='CheckButton',
+                tick='✕', value=True, color_text=('grey', 'white', 'white'))
 
 tkt.ProgressBar(canvas, 935, 10 + 5, 335, 30)
 tkt.ProgressBar(canvas, 935, 60 + 5, 335, 30).load(0.5)
 tkt.ProgressBar(canvas, 935, 110 + 5, 335, 30).load(1)
 tkt.ProgressBar(canvas, 935, 160 + 5, 335, 30).set_live(False)
 tkt.ProgressBar(canvas, 935, 210 + 5, 335, 30, borderwidth=3)
-tkt.ProgressBar(canvas, 935, 260 + 5, 335, 30, color_fill=('lightpink', 'deeppink'), color_outline=('grey', 'black')).load(2 / 3)
-tkt.ProgressBar(canvas, 935, 310 + 5, 335, 30, color_text=('brown', 'red', 'red')).load(1 / 3)
-tkt.ProgressBar(canvas, 935, 360 + 5, 335, 30, color_fill=('', 'pink')).load(1 / 6)
-tkt.ProgressBar(canvas, 935, 410 + 5, 335, 30, color_fill=('', 'deeppink')).load(1 / 7)
-tkt.ProgressBar(canvas, 935, 460 + 5, 335, 30, color_fill=('', 'skyblue'), color_text=('grey', 'white', 'white')).load(1 / 9)
+tkt.ProgressBar(canvas, 935, 260 + 5, 335, 30, color_fill=('lightpink',
+                'deeppink'), color_outline=('grey', 'black')).load(2 / 3)
+tkt.ProgressBar(canvas, 935, 310 + 5, 335, 30,
+                color_text=('brown', 'red', 'red')).load(1 / 3)
+tkt.ProgressBar(canvas, 935, 360 + 5, 335, 30,
+                color_fill=('', 'pink')).load(1 / 6)
+tkt.ProgressBar(canvas, 935, 410 + 5, 335, 30,
+                color_fill=('', 'deeppink')).load(1 / 7)
+tkt.ProgressBar(canvas, 935, 460 + 5, 335, 30, color_fill=('',
+                'skyblue'), color_text=('grey', 'white', 'white')).load(1 / 9)
 tkt.ProgressBar(canvas, 935, 510 + 5, 335, 30, justify='left').load(5 / 7)
-tkt.ProgressBar(canvas, 935, 560 + 5, 335, 30, color_outline=('red', 'red', 'red'))
+tkt.ProgressBar(canvas, 935, 560 + 5, 335, 30,
+                color_outline=('red', 'red', 'red'))
 tkt.ProgressBar(canvas, 935, 610 + 5, 335, 30, font=('华文行楷', tkt.SIZE))
 tkt.ProgressBar(canvas, 935, 660 + 5, 335, 30, mode='indeterminate').load(0.3)
 
@@ -308,9 +356,11 @@ space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)  # 创建空间
 m = 200 * math.sqrt(50 - 10 * math.sqrt(5)) / 10
 n = 200 * math.sqrt(50 + 10 * math.sqrt(5)) / 10
 points = []  # 顶点列表
-dis_side = 200 * (3 * math.sqrt(3) + math.sqrt(15)) / 12 / ((math.sqrt(10 + 2 * math.sqrt(5))) / 4)  # 面到中心的距离
+dis_side = 200 * (3 * math.sqrt(3) + math.sqrt(15)) / 12 / \
+    ((math.sqrt(10 + 2 * math.sqrt(5))) / 4)  # 面到中心的距离
 count, color_lst = 0, ['00', '77', 'FF']  # 颜色可能值
-color = ['#%s%s%s' % (r, g, b) for r in color_lst for g in color_lst for b in color_lst]  # 颜色列表
+color = ['#%s%s%s' % (r, g, b)
+         for r in color_lst for g in color_lst for b in color_lst]  # 颜色列表
 
 for i in m, -m:
     for j in n, -n:
