--- a/docs/tutorials/7-1.md
+++ b/docs/tutorials/7-1.md
@@ -6,7 +6,7 @@
 
 `tkintertools` 的 3D 画布不是只有一个，它实际的继承关系是下面这样的：
 
-`tkinter.Canvas` -> `tkintertools.Canvas` -> `tools_3d.Canvas_3D` -> `tools_3d.Space`
+`tkinter.Canvas` -> `tkintertools.Canvas` -> `tools_3d.Canvas3D` -> `tools_3d.Space`
 
 其中，后面两个是属于 `tkintertools` 的子模块 `tools_3d` 里面的。
 
@@ -14,16 +14,16 @@
 
 内置的 `Space` 类已经帮我们绑定好了相关的操作方法，如鼠标右键拖动就是平移（`translate`）、鼠标左键拖动就是旋转（`rotate`）以及鼠标滚轮滚动就是缩放（`scale`），一般用于查看 3D 对象的外观。
 
-### 1.2 Canvas_3D 类
+### 1.2 Canvas3D 类
 
-`Canvas_3D` 属于是什么 3D 事件都没有绑定的一个容器控件了。它存在的目的就是让使用者可以自定义绑定的事件及绑定的函数，而不是强制使用某些按键来触发某些事件（如鼠标左键拖动旋转 3D 对象）。这里要说明一点的就是，由于 `tkinter` 模块制定绑定事件时，会把之前已经绑定的同类事件给覆盖掉，因此我们在自定义绑定事件的时候，不能把之前的给丢掉了，要在新的绑定事件中加上它们，此外，多个绑定事件之间的执行顺序非常重要，有时候顺序错误会导致不可估计的后果。
+`Canvas3D` 属于是什么 3D 事件都没有绑定的一个容器控件了。它存在的目的就是让使用者可以自定义绑定的事件及绑定的函数，而不是强制使用某些按键来触发某些事件（如鼠标左键拖动旋转 3D 对象）。这里要说明一点的就是，由于 `tkinter` 模块制定绑定事件时，会把之前已经绑定的同类事件给覆盖掉，因此我们在自定义绑定事件的时候，不能把之前的给丢掉了，要在新的绑定事件中加上它们，此外，多个绑定事件之间的执行顺序非常重要，有时候顺序错误会导致不可估计的后果。
 
-`Canvas_3D` 类有一个名为 `space_sort` 方法非常关键，在每次画面改动之后都必须调用它来更新，否则画面不会有任何的变化。比如每一次平移、每一次旋转和缩放等，都需要调用一下它来更新一下画面。“space sort” 意为“空间位置排序”，也就是说，每次调用它后，它会根据每个 3D 对象的数据来得出它们的前后位置关系（尽管不精确，后面会再次提到），计算出前后关系再根据前后位置关系来更新画面。
+`Canvas3D` 类有一个名为 `space_sort` 方法非常关键，在每次画面改动之后都必须调用它来更新，否则画面不会有任何的变化。比如每一次平移、每一次旋转和缩放等，都需要调用一下它来更新一下画面。“space sort” 意为“空间位置排序”，也就是说，每次调用它后，它会根据每个 3D 对象的数据来得出它们的前后位置关系（尽管不精确，后面会再次提到），计算出前后关系再根据前后位置关系来更新画面。
 
-不过 `Space` 类中已经帮我们内置好了这个方法的调用，因此 `Space` 相比于 `Canvas_3D` 来说非常方便。不过有时候我们并不想让用户能够拖动画面，我们可能只是想展示某一 3D 动画或者画面，这时 `Canvas_3D` 就派上用场了！因为它根本就没有对应事件的绑定！
+不过 `Space` 类中已经帮我们内置好了这个方法的调用，因此 `Space` 相比于 `Canvas3D` 来说非常方便。不过有时候我们并不想让用户能够拖动画面，我们可能只是想展示某一 3D 动画或者画面，这时 `Canvas3D` 就派上用场了！因为它根本就没有对应事件的绑定！
 
 !!! info "注意"
-    尽管 `Space` 如此方便了，但是无论是 `Space` 还是 `Canvas_3D`，在新增加一个 3D 对象的时候，都应该调用一下 `space_sort` 方法来更新画面，因为考虑到性能和某些特殊要求的情况下，这个时候 `space_sort` 方法并不会被自动调用。
+    尽管 `Space` 如此方便了，但是无论是 `Space` 还是 `Canvas3D`，在新增加一个 3D 对象的时候，都应该调用一下 `space_sort` 方法来更新画面，因为考虑到性能和某些特殊要求的情况下，这个时候 `space_sort` 方法并不会被自动调用。
 
 ### 1.3 3D 容器控件的坐标规划
 
@@ -346,8 +346,10 @@ from tkintertools import tools_3d as t3d
 root = tkt.Tk('Tetrahedron', 1280, 720)
 space = t3d.Space(root, 1280, 720, 0, 0, keep=False)
 
-t3d.Tetrahedron(space, [-100, 0, 0 + 10], [50, 50 * math.sqrt(3), 0 + 10], [50, -50 * math.sqrt(3), 0 + 10], [0, 0, 100 * math.sqrt(2) + 10], color_fill=['red', 'yellow', 'blue', 'green'])
-t3d.Tetrahedron(space, [-100, 0, 0 - 10], [50, 50 * math.sqrt(3), 0 - 10], [50, -50 * math.sqrt(3), 0 - 10], [0, 0, -100 * math.sqrt(2) - 10], color_fill=['red', 'yellow', 'blue', 'green'])
+t3d.Tetrahedron(space, [-100, 0, 0 + 10], [50, 50 * math.sqrt(3), 0 + 10], [50, -50 * math.sqrt(
+    3), 0 + 10], [0, 0, 100 * math.sqrt(2) + 10], color_fill=['red', 'yellow', 'blue', 'green'])
+t3d.Tetrahedron(space, [-100, 0, 0 - 10], [50, 50 * math.sqrt(3), 0 - 10], [50, -50 * math.sqrt(
+    3), 0 - 10], [0, 0, -100 * math.sqrt(2) - 10], color_fill=['red', 'yellow', 'blue', 'green'])
 
 space.space_sort()
 root.mainloop()
