--- a/docs/tutorials/7-3.md
+++ b/docs/tutorials/7-3.md
@@ -1,9 +1,6 @@
 3D 动画
 =======
 
-!!! warning "警告"
-    本小节内容仍在制作中，内容不完整或不准确，若对你产生误导，~~不关我的事~~……
-
 一、3D 对象 API
 ---------------
 
@@ -11,110 +8,189 @@
 
 ### 1.1 基本 3D 对象的 API
 
+基本 3D 对象的 API 名称都是一样的，它们都是继承自类 `_Object3D`，都可以进行平移、旋转和缩放。
+
+#### 1.1.1 平移
+
+平移使用方法 `translate`，平移没有什么特别，就是移动对象在空间中的位置。
+
+#### 1.1.2 旋转
+
+旋转使用方法 `rotate`，旋转有两个重载，可以旋转绕某一点进行旋转，也可以旋转绕某一条线进行旋转。
+两者的参数略有不同，默认情况下是绕原点进行旋转。
+
+#### 1.1.3 缩放
+
+缩放使用方法 `scale`，缩放没有重载，但是它有一个参数非常有意思，即缩放参照点。将这个点设为原点，那么对象将会以原点为参照进行大小缩放，这样它的大小和位置都会发生改变。但如果我们将其设为改对象的几何中心，则对象只有大小会发生变化，位置不会有改动。
+
+#### 1.1.4 几何中心
+
+此 API 名为 `center`，调用它不会有任何变化，但它返回该对象的几何中心。可以配合其他 API 来进行使用。
+
 ### 1.2 复杂 3D 对象的 API
+
+其实复杂的 3D 对象本质上就是基本 3D 对象的组合体而已，因此它们在拥有基本 3D 对象的 API 的前提下，还有其他的方法。内置的两种复杂几何体都是继承于类 `Geometry`，它们本身没有额外的方法，但是 `Geometry` 相比于基本 3D 对象，增加了一个 `append` 方法，可以将更多的基本 3D 对象添加到一个几何体实例中去。
 
 二、通过动画类实现 3D 动画
 ------------------------
 
-动画类指的就是上一章的 Animation，通过它我们可以很方便地实现一些简单乃至复杂的动画。
+动画类指的就是上一章的 `Animation`，通过它我们可以很方便地实现一些简单乃至复杂的动画。
 
-自定义 3D 画布
--------------
+有了 3D 对象的 API 之后，我们就可以通过动画类来实现各种各样~~花里胡哨~~的效果！`Animation` 的使用方法已在上一章讲述，这里不再赘述。
 
-### 绑定事件
+三、通过 after 方法实现简单动画
+-----------------------------
 
-每个 3D 对象都有三个基本的功能，分别为平移（`translate`）、旋转（`rotate`）和缩放（`scale`），使用者可以根据自身需要，自定义绑定事件并调用相关的方法。比如说，我们现在想做这样一个绑定：按下等号键和减号键可以使每个 3D 对象自身的大小进行缩放，那么就可以按下面的步骤做。
+除了可以使用 `Animation` 类之外，我们还可以使用 `tkinter` 模块中的功能来实现一些简单的功能。
 
-分析：使 3D 对象自身大小进行缩放需要调用方法 `scale`，且缩放中心就是每个 3D 对象自身的几何中心，查阅 [文档]((./3D%20绘图子模块)) 得知，参数 `center` 值为 `None`，也就是默认值的时候，它会按自身的几何中心进行缩放。这里可以使用 `Canvas_3D` 作为容器控件，也可以使用 `Space`，这并不会影响到这个功能的实现。
+`tkinter` 模块中的控件都有一个名为 `after` 的方法，可以让我们快速做出比较简单的动画，实际上，`Animation` 的底层也是调用的 `after`，只不过进行了一些简单的封装。
 
-<!-- ![png](images/.png) -->
+下面是一个简单的示例：
+
+![gif](images/7.3-3.1-1.gif)
+
+是不是眼花缭乱了？
 
 <details><summary><b>源代码</b></summary>
 
 ```python
-import tkintertools as tkt  # 引入基础模块
-from tkintertools import tools_3d as t3d  # 引入 3d 子模块
+import math
 
-root = tkt.Tk('3D', 1280, 720)  # 创建窗口
-space = t3d.Space(root, 1280, 720, 0, 0)  # 创建空间
+import tkintertools as tkt
+from tkintertools import tools_3d as t3d
 
-for a in -100, 0, 100:
-    for b in -100, 0, 100:
-        for c in -100, 0, 100:
-            t3d.Cuboid(space, a - 50, b - 50, c - 50, 100, 100, 100,  # 创建正方体
-                       color_fill_up='white', color_fill_down='yellow', color_fill_left='red',
-                       color_fill_right='orange', color_fill_front='blue', color_fill_back='green')
-space.space_sort()  # 空间位置排序，以正确显示
+root = tkt.Tk('3D Text', 1280, 720)
+space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)
+
+r = 300
+
+O = t3d.Point(space, [0, 0, 0], fill='white', size=3)
+X = t3d.Line(space, [0, 0, 0], [1, 0, 0], fill='')
+Y = t3d.Line(space, [0, 0, 0], [0, 1, 0], fill='')
+Z = t3d.Line(space, [0, 0, 0], [0, 0, 1], fill='')
+
+ring = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text]]
+line = {'x': [], 'y': [], 'z': []}  # type: dict[str, list[t3d.Text]]
+
+for i in range(26):
+    t = chr(65+i)
+    φ = i/26 * math.tau
+    c1 = r * math.sin(φ)
+    c2 = r * math.cos(φ)
+    ring['x'].append(t3d.Text(space, [0, c1, c2], text=t, fill='#FF0000'))
+    ring['y'].append(t3d.Text(space, [c1, 0, c2], text=t, fill='#00FF00'))
+    ring['z'].append(t3d.Text(space, [c1, c2, 0], text=t, fill='#0000FF'))
+
+for i in range(10):
+    t = str(i)
+    c = (i+1) * 600/11 - r
+    line['x'].append(t3d.Text(space, [c, 0, 0], text=t, fill='#00FFFF'))
+    line['y'].append(t3d.Text(space, [0, c, 0], text=t, fill='#FF00FF'))
+    line['z'].append(t3d.Text(space, [0, 0, c], text=t, fill='#FFFF00'))
 
 
-def scale(event):
-    """ 缩放事件 """
-    k = 1.05 if event.keysym == 'equal' else 0.95 if event.keysym == 'minus' else 1  # 缩放比率
-    for geo in space.geos():  # 遍历所有的几何体（不包括基本 3D 对象）
-        geo.scale(k, k, k)  # 缩放
-        geo.update()  # 更新改对象的实际画面
-    space.space_sort()  # 空间前后位置排序
+def animation():
+    for obj3D in ring['x']:
+        obj3D.rotate(0.05, axis=X.coordinates)
+    for obj3D in ring['y']:
+        obj3D.rotate(0.05, axis=Y.coordinates)
+    for obj3D in ring['z']:
+        obj3D.rotate(0.05, axis=Z.coordinates)
+    for obj3D in line['x']:
+        obj3D.rotate(-0.05, axis=Y.coordinates)
+    for obj3D in line['y']:
+        obj3D.rotate(-0.05, axis=Z.coordinates)
+    for obj3D in line['z']:
+        obj3D.rotate(-0.05, axis=X.coordinates)
+    for obj3D in space.items_3d():
+        obj3D.rotate(0, -0.01, 0.01, center=O.center())
+        obj3D.update()
+    root.after(10, animation)
 
 
-root.bind('<Key-equal>', scale)  # 绑定等号按键
-root.bind('<Key-minus>', scale)  # 绑定减号按键
-root.mainloop()  # 消息事件循环
+animation()
+root.mainloop()
 ```
 
 </details>
 
-### 简单的 3D 动画
+或许我们可以用它做一个 3D 的时钟？
 
-动画嘛，很简单，原理和上面的类似，只不过将手动改变状态改成了自动改变状态，如让它自动旋转。下面给一个简单的示例。
-
-<!-- ![gif](images/.gif) -->
+![png](images/7.3-3.1-2.png)
 
 <details><summary><b>源代码</b></summary>
 
 ```python
-import math  # 数学支持
+import math
+import time
 
-import tkintertools as tkt  # 引入基础模块
-from tkintertools import tools_3d as t3d  # 引入 3d 子模块
+import tkintertools as tkt
+from tkintertools import tools_3d as t3d
 
-root = tkt.Tk('3D', 1280, 720)  # 创建窗口
-space = t3d.Space(root, 1280, 720, 0, 0)  # 创建空间
+root = tkt.Tk('3D Clock', 1280, 720)
+space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)
 
-# 创建两个（正）四面体
-t1 = t3d.Tetrahedron(
-    space, [-100, 0, 0 + 10], [50, 50 * math.sqrt(3), 0 + 10],
-    [50, -50 * math.sqrt(3), 0 + 10], [0, 0, 100 * math.sqrt(2) + 10],
-    color_fill=['red', 'yellow', 'blue', 'green'])
-t2 = t3d.Tetrahedron(
-    space, [-100, 0, 0 - 10], [50, 50 * math.sqrt(3), 0 - 10],
-    [50, -50 * math.sqrt(3), 0 - 10], [0, 0, -100 * math.sqrt(2) - 10],
-    color_fill=['red', 'yellow', 'blue', 'green'])
+O = t3d.Point(space, [0, 0, 0], fill='white', size=3)
+X = t3d.Line(space, [0, 0, 0], [1, 0, 0], fill='')
+Y = t3d.Line(space, [0, 0, 0], [0, 1, 0], fill='')
+Z = t3d.Line(space, [0, 0, 0], [0, 0, 1], fill='')
 
+h = t3d.Line(space, [0, 0, 0], [0, 0, 100], width=6, fill='#FF0000')
+m = t3d.Line(space, [0, 0, 0], [0, 0, 150], width=4, fill='#00FF00')
+s = t3d.Line(space, [0, 0, 0], [0, 0, 250], width=2, fill='#0000FF')
 
-def spin():
-    """ 自动旋转 """
-    t1.rotate(dz=0.01)
-    t2.rotate(dz=0.01)
+fill = []
+fill += tkt.color(['#FF0000', '#00FF00'], seqlength=20)
+fill += tkt.color(['#00FF00', '#0000FF'], seqlength=20)
+fill += tkt.color(['#0000FF', '#FF0000'], seqlength=20)
 
+r = 300
 
-def floating(value):
-    """ 上下浮动 """
-    t1.translate(dz=math.sin(value))
-    t2.translate(dz=math.sin(value))
-
-
-def animation(value=0):
-    """ 形成动画 """
-    spin()
-    floating(value)
-    space.space_sort()  # 给它们的空间位置排序以正确显示
-    t1.update()
-    t2.update()
-    space.after(10, animation, value + math.pi / 60)
+for i, c in enumerate(fill):
+    t = f'{(i // 5):02d}' if i % 5 == 0 else '●'
+    if t == '00':
+        t = 12
+    size = 30 if i % 5 == 0 else 16
+    φ = (15 - i) / 60 * math.tau
+    x = r * math.cos(φ)
+    y = r * math.sin(φ)
+    t3d.Text(space, [0, x, y], text=t, fill=c, font=(tkt.FONT, -size))
 
 
-animation()
-root.mainloop()  # 消息事件循环
+time_ = list(map(int, time.strftime('%H %M %S', time.localtime()).split()))
+h_ = time_[0] % 12
+m_ = time_[1]
+s_ = time_[2]
+
+h.rotate((60 * ((60 * h_) + m_) + s_) * -
+         math.tau / 60 / 60 / 12, axis=X.coordinates)
+m.rotate(((60 * m_) + s_) * -math.tau / 60 / 60, axis=X.coordinates)
+s.rotate(s_ * -math.tau / 60, axis=X.coordinates)
+
+
+def animation(speed: int, t: int = 60*((60*h_) + m_) + s_) -> None:
+    """动画"""
+    s.rotate(-math.tau / 60, axis=X.coordinates)
+    space.itemconfigure(s.item, fill=fill[(t % 60)])
+    s.update()
+    m.rotate(-math.tau / 60 / 60, axis=X.coordinates)
+    space.itemconfigure(m.item, fill=fill[((t // 60) % 60)])
+    m.update()
+    h.rotate(-math.tau / 60 / 60 / 12, axis=X.coordinates)
+    space.itemconfigure(h.item, fill=fill[((t // 60 // 12) % 60)])
+    h.update()
+    space.after(1000 // speed, animation, speed, t + 1)
+
+
+def start() -> None:
+    """校正时间"""
+    while not math.isclose(time.time(), int(time.time())):
+        continue
+    animation(1)  # 参数为时间流逝速度
+
+
+start()
+root.mainloop()
 ```
 
 </details>
