--- a/docs/tutorials/5-2.md
+++ b/docs/tutorials/5-2.md
@@ -35,7 +35,7 @@ image = tkt.PhotoImage('example.gif')
 for _ in image.parse():  # 解析过程
     pass  # 表面上，啥也没干，实际上，在解析……
 
-image.play(canvas_item_id, 30)
+image.play(canvas, canvas_item_id, 30)
 
 root.mainloop()
 ```
@@ -61,7 +61,7 @@ image = tkt.PhotoImage('example.gif')
 # for _ in image.parse():  # 解析过程
 #     pass  # 表面上，啥也没干，实际上，在解析……
 
-image.play(canvas_item_id, 30)
+image.play(canvas, canvas_item_id, 30)
 
 root.mainloop()
 ```
