--- a/docs/tutorials/5-3.md
+++ b/docs/tutorials/5-3.md
@@ -3,6 +3,59 @@
 
 这一小节不讲别的，就讲进度条和 gif 解析的联动。
 
-!!! info "提示"
-    本小节还未完成更新！
+!!! info "注意"
+    此小节会涉及到一些与多线程相关的知识。
 
+一、获取 gif 图片的总帧数
+-----------------------
+
+要想知道 gif 解析了多少，必须得先知道 gif 的总帧数。你可以通过其他的软件来获取 gif 图的总帧数，你也可也通过下面的代码来获取 gif 的总帧数。
+
+但你要知道，下面的代码实际上完全解析一遍来得到总帧数的，所以花费的时间会比较长。目前没有比较好的方法来解决这个问题。
+
+```python
+
+image = tkt.PhotoImage('example.gif')
+
+for i in image.parse():
+    print(i)
+```
+
+上述代码最后一个输出就是总帧数。
+
+二、以进度条展示加载进度
+----------------------
+
+由于 gif 的解析是一个阻塞过程，所以这里我们要采用多线程来避免程序的严重卡顿。
+
+```python
+import threading
+
+import tkintertools as tkt
+
+root = tkt.Tk('动图解析和进度条的关联', 1280, 720)
+canvas = tkt.Canvas(root, 1280, 720, 0, 0)
+canvas_item_id = canvas.create_image(640, 360)
+pb = tkt.ProgressBar(canvas, 310, 580, 660, 30)
+
+image = tkt.PhotoImage('example.gif')
+
+
+def load_image() -> None:
+    """解析动图"""
+    for i in image.parse():
+        pb.load(i/39)
+    image.start(canvas, canvas_item_id, 30)
+
+
+threading.Thread(target=load_image, daemon=True).start()
+root.mainloop()
+```
+
+运行的效果是这样的（示例所用 gif 图片来自互联网，侵权删）：
+
+![gif](images/5.3-2.1-1.gif)
+
+上面采用的解析方式是运行前解析，运行时解析的回调目前无法得到。
+
+当我们有大量的资源需要加载的时候，就可以将它们组合一下，一起加载，然后用进度条的方式展现啦！
