docs: modified some details

--- a/docs/tutorials/5-1.md
+++ b/docs/tutorials/5-1.md
@@ -19,7 +19,7 @@
 !!! info "注意"
     图片缩放只适用于 png 类型的图片。
 
-`tkintertools.PhotoImage` 使用方法 `zoom` 来缩放图片，可以放大和缩小，参数是宽高的缩放比例，返回一个新的 `tkinter.PhotoImage` 对象。一般来说我们不需要主动去调用这个方法，因为 `tkintertools` 底层会自动调用这个方法来让图片自动缩放以适应窗口（画布）的宽高。
+`tkintertools.PhotoImage` 使用方法 `zoom` 来缩放图片，可以放大和缩小，参数是宽高的缩放比例，返回一个新的 `tkinter.PhotoImage` 对象。一般来说我们不需要主动去调用这个方法，因为 `tkintertools` 底层会自动调用这个方法来让图片自动缩放以适应窗口（画布）的宽高。关于自动缩放这一点，可以见 [§1.2 认识 tkintertools](./1-2.md) 自动控制大小部分。
 
 下面是一个简单的例子：
 
