--- a/docs/tutorials/5-3.md
+++ b/docs/tutorials/5-3.md
@@ -52,7 +52,7 @@ threading.Thread(target=load_image, daemon=True).start()
 root.mainloop()
 ```
 
-运行的效果是这样的（示例所用 gif 图片来自互联网，侵权删）：
+运行的效果是这样的（示例所用 gif 图片来自互联网，侵权删），如果你发现下面的图片很卡，放心，不是 `tkintertools` 的问题，而是你网页加载比较慢，耐心等待就好：
 
 ![gif](images/5.3-2.1-1.gif)
 
