--- a/docs/tutorials/7-1.md
+++ b/docs/tutorials/7-1.md
@@ -6,7 +6,10 @@
 
 `tkintertools` 的 3D 画布不是只有一个，它实际的继承关系是下面这样的：
 
-`tkinter.Canvas` -> `tkintertools.Canvas` -> `tools_3d.Canvas3D` -> `tools_3d.Space`
+```mermaid
+flowchart LR
+    tkinter.Canvas --> tkintertools.Canvas --> tools_3d.Canvas3D --> tools_3d.Space
+```
 
 其中，后面两个是属于 `tkintertools` 的子模块 `tools_3d` 里面的。
 
