--- a/docs/tutorials/7-3.md
+++ b/docs/tutorials/7-3.md
@@ -45,7 +45,7 @@
 
 `tkinter` 模块中的控件都有一个名为 `after` 的方法，可以让我们快速做出比较简单的动画，实际上，`Animation` 的底层也是调用的 `after`，只不过进行了一些简单的封装。
 
-下面是一个简单的示例：
+下面是一个简单的示例（如果下面的动图很卡，说明你网页加载比较慢，并非 `tkintertools` 的问题，耐心等待就好）：
 
 ![gif](images/7.3-3.1-1.gif)
 
