--- a/docs/tutorials/7-1.md
+++ b/docs/tutorials/7-1.md
@@ -7,8 +7,13 @@
 `tkintertools` 的 3D 画布不是只有一个，它实际的继承关系是下面这样的：
 
 ```mermaid
-flowchart LR
-    tkinter.Canvas --> tkintertools.Canvas --> tools_3d.Canvas3D --> tools_3d.Space
+flowchart RL
+    id1(tkinter.Canvas)
+    id2(tkintertools.Canvas)
+    id3(tools_3d.Canvas3D)
+    id4(tools_3d.Space)
+
+    id4 --> id3 --> id2 --> id1
 ```
 
 其中，后面两个是属于 `tkintertools` 的子模块 `tools_3d` 里面的。
