docs: update tutorials 6.1

--- a/docs/tutorials/1-2.md
+++ b/docs/tutorials/1-2.md
@@ -343,15 +343,15 @@ root.mainloop()
 <details><summary><b>源代码</b></summary>
 
 ```python
-import itertools  # 组合数支持
-import math  # 数学支持
-import statistics  # 计算平均数
+import itertools
+import math
+import statistics
 
-import tkintertools as tkt  # 引入基础模块
-from tkintertools import tools_3d as t3d  # 引入 3d 子模块
+import tkintertools as tkt
+from tkintertools import tools_3d as t3d
 
-root = tkt.Tk('3D', 1280, 720)  # 创建窗口
-space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)  # 创建空间
+root = tkt.Tk('3D', 1280, 720)
+space = t3d.Space(root, 1280, 720, 0, 0, bg='black', keep=False)
 
 m = 200 * math.sqrt(50 - 10 * math.sqrt(5)) / 10
 n = 200 * math.sqrt(50 + 10 * math.sqrt(5)) / 10
@@ -371,23 +371,23 @@ for i in m, -m:
 for p in itertools.combinations(points, 3):  # 所有的顶点组合
     dis = math.hypot(*[statistics.mean(c[i] for c in p) for i in range(3)])
     if math.isclose(dis, dis_side):
-        t3d.Side(space, *p, fill=color[count], outline='white')  # 创建面
+        t3d.Side(space, *p, fill=color[count], outline='white')
         count += 1
 
 
 def scale(event):
     """ 缩放事件 """
-    k = 1.05 if event.keysym == 'equal' else 0.95 if event.keysym == 'minus' else 1  # 缩放比率
-    for geo in space.items_3d():  # 遍历所有的几何体（不包括基本 3D 对象）
-        geo.scale(k, k, k)  # 缩放
-        geo.update()  # 更新改对象的实际画面
-    space.space_sort()  # 空间前后位置排序
+    k = 1.05 if event.keysym == 'equal' else 0.95 if event.keysym == 'minus' else 1
+    for geo in space.items_3d():
+        geo.scale(k, k, k)
+        geo.update()
+    space.space_sort()
 
 
-space.space_sort()  # 给它们的空间位置排序以正确显示
-root.bind('<Key-equal>', scale)  # 绑定等号按键
-root.bind('<Key-minus>', scale)  # 绑定减号按键
-root.mainloop()  # 消息事件循环
+space.space_sort()
+root.bind('<Key-equal>', scale)
+root.bind('<Key-minus>', scale)
+root.mainloop()
 ```
 
 </details>
