--- a/docs/tutorials/5-2.md
+++ b/docs/tutorials/5-2.md
@@ -40,9 +40,8 @@ image.play(canvas, canvas_item_id, 30)
 root.mainloop()
 ```
 
-我想现在，肯定有人就要问了，为什么要这样写，为什么 `tkintertools` 的开发者不直接给 `PhotoImage` 写一个方法来完成整个解析过程，非要我们来写这么个麻烦的过程？？？
-
-那必然，是有原因的啊！有些开发者可能需要知道当前解析到什么地步了，并在每个解析步骤设置回调函数（比如进度条的更新），于是就设计了这个生成器来完成这个功能，这些将在下一节中详细讲述。
+!!! question "猜你想问：为什么不直接给 `PhotoImage` 写一个简单方法来完成整个解析过程，非要写这么个麻烦的过程？"
+    那必然，是有原因的啊！有些人可能需要知道当前解析到什么地步了，并在每个解析步骤设置回调函数（比如进度条的更新），于是就设计了这个生成器来完成这个功能，这些将在下一节中详细讲述。
 
 三、运行时解析 gif
 -----------------
