--- a/docs/tutorials/7-4.md
+++ b/docs/tutorials/7-4.md
@@ -46,7 +46,7 @@ root.mainloop()
 
 </details>
 
-实际上，章节 1.2 中就有一张和这个类似的图片。
+实际上，[§1.2 认识 tkintertools](./1-2.md#21-高度可配置的控件) 中就有一张和这个类似的图片。
 
 ### 1.2 注意事项
 
